Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30748

getSaveFileName doesn't check for existing file if extension isn't entered and the save type is selected to be 'Text Files' on Windows platform

XMLWordPrintable

    • 42760e43eaa64e834809ef5fb01a83cfb75f4f04 ,fixup: a90d93285a0b95013020644f29c5d932aa989d37

      The implementation doesn't follow the Windows platform default behavior if 'Save as type:' is selected to be 'Text Files (*.txt)'

      standarddialogs can be used to reproduce this issue.

      Follow these steps.
      1) Using notepad or some other application create a file called test.txt
      2) In the StandardDialogs example navigate to that directory and verify that you see the file test.txt.
      3) In the Save as type: Select *.txt
      4) Type "test" as the filename.
      5) Click save.

      Expected result:
      A dialog should be shown to ask about if one wants to replace an existing file.

      Actual result:
      No warning about overwriting an existing file is shown.

      Note that the output is indicating that the file test.txt at that path was selected.

      Note: Using the non-native dialog the extension .txt is not added to the file which is also unexpected behavior.

        For Gerrit Dashboard: QTBUG-30748
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            qtcomsupport Qt Support
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes