Windows native save file dialog: Do not append suffix afterwards.

Instead, set the currently selected filter's suffix as
default suffix of the dialog unless another default suffix
has been set.

This emulates the behavior of Qt 4 behavior which would set
the selected name filter's suffix as default suffix in
QFileDialog::getSaveFileName().

Task-number: QTBUG-30748
Change-Id: I111cd6190ddab8775a0fa72b94b3c728dd411c5e
Reviewed-by: Oliver Wolff <oliver.wolff@digia.com>
Reviewed-by: Andy Shaw <andy.shaw@digia.com>

cregit: 42760e43eaa64e834809ef5fb01a83cfb75f4f04 https://github.com/qt/qtbase/commit/42760e43eaa64e834809ef5fb01a83cfb75f4f04